# OpenGLAgain

./: CMakeLists.txt
Lib/glfw-3-3-8/: README.md
src/: main.cpp
src/Classes/: glad.c
